--- a/app/views/greeting_cards/_card_partial.html.erb
+++ b/app/views/greeting_cards/_card_partial.html.erb
@@ -1,25 +1,27 @@
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 <% @cards.each_slice(3) do |slice| %>
   <div class="row col s12 center-align">
     <% slice.each do |card| %>
-      <div id="card" class="col s3 no-padding center-align" style="margin: 0 auto">
+      <div id="card" class="col s12 m4 no-padding center-align" style="margin: 0 auto">
         <div class="row col s12">
-          <div class="row border valign-wrapper">
+          <div class="row valign-wrapper">
             <div class="col s1 valign-wrapper">
               <a>
-                <h6 class="hidden previous">Close</h6>
+                <i class="material-icons"><h3 class="hidden previous">skip_previous<h3></i>
               </a>
             </div>
-            <div class="col s10">
-              <%= image_tag card.front_image.url(:medium), :class => 'responsive-img front-image no-pading no-margin' %>
-              <%= image_tag card.inside_image(:medium), :class => 'hidden responsive-img inside-image no-pading no-margin' %>
+            <div class="col s9 center-align">
+              <%= image_tag card.front_image.url(:medium), :class => 'border responsive-img front-image' %>
+              <%= image_tag card.inside_image(:medium), :class => 'border hidden responsive-img inside-image' %>
             </div>
             <div class="col s1 valign-wrapper no-padding">
               <a>
-                <h6 class="next no-padding">Open</h6>
+                <i class="material-icons"><h3 class="next no-padding">skip_next</h3></i>
               </a>
             </div>
           </div>
-          <div class="row border">
+          <div class="row">
             <div class="col s12">
               <h3><%= card.code %></h3>
             </div>
