--- a/app/views/greeting_cards/index.html.erb
+++ b/app/views/greeting_cards/index.html.erb
@@ -5,24 +5,51 @@
   <div class="col s4 border">
     <a href="/cards/birthday">
       <h4>Birthday</h4>
-      <%= image_tag @birthday_picture.front_image.url(:medium), :class => 'responsive-img' %>
+      <% if @birthday_picture %>
+        <%= image_tag @birthday_picture.front_image.url(:medium), :class => 'responsive-img' %>
+      <% end %>
     </a>
   </div>
   <div class="col s4 ">
-    <a href="/cards/sympathy"><h4>Sympathy</h4></a>
+    <a href="/cards/sympathy">
+      <h4>Sympathy</h4>
+      <% if @sympathy_picture %>
+        <%= image_tag @sympathy_picture.front_image.url(:medium), :class => 'responsive-img' %>
+      <% end %>
+    </a>
   </div>
   <div class="col s4 ">
-    <a href="/cards/thank_you"><h4>Thank You</h4></a>
+    <a href="/cards/thank_you">
+      <h4>Thank You</h4>
+      <% if @thank_you_picture %>
+        <%= image_tag @thank_you_picture.front_image.url(:medium), :class => 'responsive-img' %>
+      <% end %>
+    </a>
   </div>
 </div>
 <div class="row center-align">
   <div class="col s4 ">
-    <a href="/cards/love"><h4>Love</h4></a>
+    <a href="/cards/love">
+      <h4>Love</h4>
+      <% if @love_picture %>
+        <%= image_tag @love_picture.front_image.url(:medium), :class => 'responsive-img' %>
+      <% end %>
+    </a>
   </div>
   <div class="col s4 ">
-    <a href="/cards/congratulations"><h4>Congratulations</h4></a>
+    <a href="/cards/congratulations">
+      <h4>Congratulations</h4>
+      <% if @congratulations_picture %>
+        <%= image_tag @congratulations_picture.front_image.url(:medium), :class => 'responsive-img' %>
+      <% end %>
+    </a>
   </div>
   <div class="col s4 ">
-    <a href="/cards/anniversary"><h4>Anniversary</h4></a>
+    <a href="/cards/anniversary">
+      <h4>Anniversary</h4>
+      <% if @anniversary_picture %>
+        <%= image_tag @anniversary_picture.front_image.url(:medium), :class => 'responsive-img' %>
+      <% end %>
+    </a>
   </div>
 </div>
