--- a/app/views/led_pictures/index.html.erb
+++ b/app/views/led_pictures/index.html.erb
@@ -1,29 +1,29 @@
-<div class="col s6 offset-s3">
+<!-- <div class="col s6 offset-s3">
   <div class="row">
-    <%= form_for LedPicture.new do |f| %>
+    <#%= form_for LedPicture.new do |f| %>
     <div class="input-field">
-      <%= f.label "Code" %>
-      <%= f.text_field :code %>
+      <#%= f.label "Code" %>
+      <#%= f.text_field :code %>
     </div>
     <div class="input-field">
-      <%= f.label "Image" %>
-      <%= f.file_field :image %>
+      <#%= f.label "Image" %>
+      <#%= f.file_field :image %>
     </div>
     <div class="input-field">
-      <%= f.label "GIF" %>
-      <%= f.file_field :gif %>
+      <#%= f.label "GIF" %>
+      <#%= f.file_field :gif %>
     </div>
-    <%= f.submit "Create" %>
-    <% end %>
+    <#%= f.submit "Create" %>
+    <#% end %>
   </div>
-</div>
+</div> -->
 
 <h1 class="center-align">LED Pictu<span id="flicker">r</span>es</h1>
 
 <% @led_pictures.each_slice(3) do |slice| %>
   <div class="row">
     <% slice.each do |led| %>
-      <div class="col s4 led-picture">
+      <div class="col s12 m4 led-picture center-align">
         <img src="/play.png" alt="" class="play-button responsive-img" />
         <%= image_tag led.image.url(:medium), :class => "responsive-img image" %>
         <%= image_tag led.gif.url(:medium), :class => "responsive-img hidden gif" %>
