--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <div class="row">
-  <div class="col s4 center-align">
+  <div class="col s12 m4 center-align">
     <a href="/greeting_cards">
       <h3>Greeting Cards</h3>
       <% if @greeting_card_picture %>
@@ -15,7 +15,7 @@
       <% end %>
     </a>
   </div>
-  <div class="col s4 center-align">
+  <div class="col s12 m4 center-align">
     <a href="/led_pictures">
       <h3>LED Pictures</h3>
       <% if @led_picture %>
@@ -23,7 +23,7 @@
       <% end %>
     </a>
   </div>
-  <div class="col s4 center-align">
+  <div class="col s12 m4 center-align">
     <a href="/guitar_string_bracelets">
       <h3>Guitar String Bracelets</h3>
       <% if @guitar_string_bracelet_picture %>
