--- a/app/views/greeting_cards/anniversary.html.erb
+++ b/app/views/greeting_cards/anniversary.html.erb
@@ -22,3 +22,10 @@
 <h1>Anniversary</h1>
 
 <%= render partial: "card_partial" %>
+
+
+<script>
+  $(document).ready(function(){
+    $('select').material_select();
+  })
+</script>
