--- a/app/views/greeting_cards/birthday.html.erb
+++ b/app/views/greeting_cards/birthday.html.erb
@@ -22,3 +22,9 @@
 <h1>Birthday</h1>
 
 <%= render partial: "card_partial" %>
+
+<script>
+  $(document).ready(function(){
+    $('select').material_select();
+  })
+</script>
