--- a/app/views/guitar_string_bracelets/index.html.erb
+++ b/app/views/guitar_string_bracelets/index.html.erb
@@ -1,2 +1,8 @@
 
 <h1>Guitar String Bracelets</h1>
+
+<script>
+  $(document).ready(function(){
+    $('select').material_select();
+  })
+</script>
