--- a/app/views/led_pictures/index.html.erb
+++ b/app/views/led_pictures/index.html.erb
@@ -34,6 +34,10 @@
 <% end %>
 
 <script>
+  $(document).ready(function(){
+    $('select').material_select();
+  })
+
   $('.image').mouseover(function(){
     gifSwap($(this))
   })
