--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>GrassyHillProudctions</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => false %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => false %>
+  <link href="https://fonts.googleapis.com/css?family=Lobster+Two|Trochut:400i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <%= csrf_meta_tags %>
@@ -11,7 +12,7 @@
 <body>
   <nav>
     <div class="nav-wrapper">
-      <a href="/" class="brand-logo"><h4>Grassy Hill Productions</h4></a>
+      <a href="/" class="brand-logo logo"><h4>Grassy Hill Productions</h4></a>
       <a class="right hide-on-large-only dropdown-button" href="#!" data-activates="dropdown1"><i class="material-icons right">toc</i></a>
       <ul id="dropdown1" class="dropdown-content hide-on-large-only right">
         <li><a href="/about">About Us</a></li>
