--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 
 
-<h1 class="center-align">Grassy Hill Productions</h1>
+<h1 class="center-align logo">Grassy Hill Productions</h1>
 
 <div class="col s12 center-align">
   <img src="/logo.png" alt="" class="responsive-img" />
