--- a/app/views/greeting_cards/_card_partial.html.erb
+++ b/app/views/greeting_cards/_card_partial.html.erb
@@ -23,7 +23,7 @@
           </div>
           <div class="row">
             <div class="col s12">
-              <h3><%= card.code %></h3>
+              <h3 class="trochut"><%= card.code %></h3>
             </div>
           </div>
         </div>
