--- a/app/views/led_pictures/index.html.erb
+++ b/app/views/led_pictures/index.html.erb
@@ -27,8 +27,8 @@
         <img src="/play.png" alt="" class="play-button responsive-img" />
         <%= image_tag led.image.url(:medium), :class => "responsive-img image" %>
         <%= image_tag led.gif.url(:medium), :class => "responsive-img hidden gif" %>
-        <h5><%= led.title %></h5>
-        <h4><%= led.code %></h4>
+        <h5 class="trochut"><%= led.title %></h5>
+        <h4 class = "trochut"><%= led.code %></h4>
       </div>
     <% end %>
   </div>
