art title change

--- a/app/views/led_pictures/index.html.erb
+++ b/app/views/led_pictures/index.html.erb
@@ -18,7 +18,7 @@
   </div>
 </div> -->
 
-<h1 class="center-align">LED Pictu<span id="flicker">r</span>es</h1>
+<h1 class="center-align trochut">Back-Lit Canvas Art</h1>
 
 <% @led_pictures.each_slice(4) do |slice| %>
   <div class="row">
