--- a/app/views/greeting_cards/anniversary.html.erb
+++ b/app/views/greeting_cards/anniversary.html.erb
@@ -19,9 +19,13 @@
   </div>
 </div>
 
-<h1>Anniversary</h1>
+<div class="center-align">
 
-<%= render partial: "card_partial" %>
+  <h2 class="trochut">Anniversary</h2>
+
+  <%= render partial: "card_partial" %>
+
+</div>
 
 
 <script>
