--- a/app/views/greeting_cards/love.html.erb
+++ b/app/views/greeting_cards/love.html.erb
@@ -19,9 +19,13 @@
   </div>
 </div>
 
-<h1>Love</h1>
+<div class="center-align">
 
-<%= render partial: "card_partial" %>
+  <h2 class="trochut">Love</h2>
+
+  <%= render partial: "card_partial" %>
+
+</div>
 
 <script>
   $(document).ready(function(){
