--- a/app/views/greeting_cards/sympathy.html.erb
+++ b/app/views/greeting_cards/sympathy.html.erb
@@ -19,9 +19,14 @@
   </div>
 </div>
 
-<h1>Sympathy</h1>
 
-<%= render partial: "card_partial" %>
+<div class="center-align">
+
+  <h2 class="trochut">Sympathy</h2>
+
+  <%= render partial: "card_partial" %>
+
+</div>
 
 <script>
   $(document).ready(function(){
