--- a/app/views/greeting_cards/congratulations.html.erb
+++ b/app/views/greeting_cards/congratulations.html.erb
@@ -19,10 +19,13 @@
   </div>
 </div>
 
-<h1>Congrats</h1>
+<div class="center-align">
 
-<%= render partial: "card_partial" %>
+  <h2 class="trochut">Congrats</h2>
 
+  <%= render partial: "card_partial" %>
+
+</div>
 
 <script>
   $(document).ready(function(){
