--- a/app/views/guitar_string_bracelets/index.html.erb
+++ b/app/views/guitar_string_bracelets/index.html.erb
@@ -1,5 +1,23 @@
 
-<h1>Guitar String Bracelets</h1>
+<div class="center-align">
+  <div class="row">
+    <h2 class="trochut" style="text-decoration: underline">Guitar String Bracelets</h2>
+  </div>
+  <div class="row">
+    <h4 class="oswald">Retail $17.95</h4>
+  </div>
+  <div class="row">
+    <div class="col s12 m4">
+      <img src="/guitar-1.jpeg" alt="" class="responsive-img"/>
+    </div>
+    <div class="col s12 m4">
+      <img src="/guitar-2.jpeg" alt="" class="responsive-img"/>
+    </div>
+    <div class="col s12 m4">
+      <img src="/guitar-3.jpeg" alt="" class="responsive-img"/>
+    </div>
+  </div>
+</div>
 
 <script>
   $(document).ready(function(){
