--- a/app/views/led_pictures/index.html.erb
+++ b/app/views/led_pictures/index.html.erb
@@ -1,22 +1,3 @@
-<!-- <div class="col s6 offset-s3">
-  <div class="row">
-    <#%= form_for LedPicture.new do |f| %>
-    <div class="input-field">
-      <#%= f.label "Code" %>
-      <#%= f.text_field :code %>
-    </div>
-    <div class="input-field">
-      <#%= f.label "Image" %>
-      <#%= f.file_field :image %>
-    </div>
-    <div class="input-field">
-      <#%= f.label "GIF" %>
-      <#%= f.file_field :gif %>
-    </div>
-    <#%= f.submit "Create" %>
-    <#% end %>
-  </div>
-</div> -->
 
 <h1 class="center-align trochut">Back-Lit Canvas Art</h1>
 
@@ -28,7 +9,7 @@
         <%= image_tag led.image.url(:medium), :class => "responsive-img image" %>
         <%= image_tag led.gif.url(:medium), :class => "responsive-img hidden gif" %>
         <h5 class="trochut"><%= led.title %></h5>
-        <h4 class = "trochut"><%= led.code %></h4>
+        <h4 class = "oswald"><%= led.code %></h4>
       </div>
     <% end %>
   </div>
