--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,15 +1,15 @@
 
 
-<h1 class="center-align logo">Grassy Hill Productions</h1>
 
 <div class="col s12 center-align">
+  <h1 class="center-align logo">Grassy Hill Productions</h1>
   <img src="/logo.png" alt="" class="responsive-img" />
 </div>
 
 <div class="row">
   <div class="col s12 m4 center-align">
     <a href="/greeting_cards">
-      <h3>Greeting Cards</h3>
+      <h3 class="trochut">Greeting Cards</h3>
       <% if @greeting_card_picture %>
         <%= image_tag @greeting_card_picture.front_image.url(:medium), :class => 'responsive-img' %>
       <% end %>
@@ -17,7 +17,7 @@
   </div>
   <div class="col s12 m4 center-align">
     <a href="/led_pictures">
-      <h3>LED Pictures</h3>
+      <h3 class="trochut">Back-Lit Canvas Art</h3>
       <% if @led_picture %>
         <%= image_tag @led_picture.image.url(:medium), :class => 'responsive-img' %>
       <% end %>
@@ -25,10 +25,8 @@
   </div>
   <div class="col s12 m4 center-align">
     <a href="/guitar_string_bracelets">
-      <h3>Guitar String Bracelets</h3>
-      <% if @guitar_string_bracelet_picture %>
-        <%= image_tag @guitar_string_bracelet_picture.image.url(:medium), :class => 'responsive-img' %>
-      <% end %>
+      <h3 class="trochut">Guitar String Bracelets</h3>
+      <img src="/guitar-1.jpeg" alt="" class="responsive-img"/>
     </a>
   </div>
 </div>
