--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,7 +11,7 @@
     <a href="/greeting_cards">
       <h3 class="trochut">Greeting Cards</h3>
       <% if @greeting_card_picture %>
-        <%= image_tag @greeting_card_picture.front_image.url(:medium), :class => 'responsive-img' %>
+        <%= image_tag @greeting_card_picture.front_image.url(:large), :class => 'responsive-img' %>
       <% end %>
     </a>
   </div>
