--- a/app/views/led_pictures/index.html.erb
+++ b/app/views/led_pictures/index.html.erb
@@ -15,6 +15,12 @@
   </div>
 <% end %>
 
+<div class="row center-align">
+  <div class="col s6 offset-s3">
+    <img src="/back.jpeg" alt="" class="responsive-img"/>
+  </div>
+</div>
+
 <script>
   $(document).ready(function(){
     $('select').material_select();
