--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,15 +14,8 @@
   <nav>
     <div class="nav-wrapper">
       <a href="/" class="brand-logo logo"><h4>Grassy Hill Productions</h4></a>
-      <a class="right hide-on-large-only dropdown-button" href="#!" data-activates="dropdown1"><i class="material-icons right">toc</i></a>
-      <ul id="dropdown1" class="dropdown-content hide-on-large-only right">
-        <li><a href="/about">About Us</a></li>
+        <!-- <li><a href="/about">About Us</a></li> -->
         <li><a href="/contact">Contact</a></li>
-      </ul>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="/about">About Us</a></li>
-        <li><a href="/contact">Contact</a></li>
-      </ul>
     </div>
   </nav>
 
