--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,10 @@
   <nav>
     <div class="nav-wrapper">
       <a href="/" class="brand-logo logo"><h4>Grassy Hill Productions</h4></a>
-        <!-- <li><a href="/about">About Us</a></li> -->
+      <a class="right hide-on-large-only dropdown-button" href="#!" data-activates="dropdown1"><i class="material-icons right">toc</i></a>
+      <ul id="nav-mobile" class="right">
         <li><a href="/contact">Contact</a></li>
+      </ul>
     </div>
   </nav>
 
