--- a/app/views/greeting_cards/index.html.erb
+++ b/app/views/greeting_cards/index.html.erb
@@ -1,5 +1,5 @@
 
-<h2 class="center-align trochut">Greeting Cards</h2>
+<h2 class="center-align trochut" style="text-decoration:underline">Greeting Cards</h2>
 
 <div class="row center-align">
   <div class="col s4">
