--- a/app/views/led_pictures/index.html.erb
+++ b/app/views/led_pictures/index.html.erb
@@ -1,5 +1,5 @@
 
-<h1 class="center-align trochut">Back-Lit Canvas Art</h1>
+<h1 class="center-align trochut" style="text-decoration:underline">Back-Lit Canvas Art</h1>
 
 <% @led_pictures.each_slice(4) do |slice| %>
   <div class="row">
