--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
 <div class="row">
   <div class="col s12 m4 center-align">
     <a href="/greeting_cards">
-      <h3 class="trochut">Greeting Cards</h3>
+      <h3 class="trochut black-text">Greeting Cards</h3>
       <% if @greeting_card_picture %>
         <%= image_tag @greeting_card_picture.front_image.url(:large), :class => 'responsive-img' %>
       <% end %>
@@ -17,7 +17,7 @@
   </div>
   <div class="col s12 m4 center-align">
     <a href="/led_pictures">
-      <h3 class="trochut">Back-Lit Canvas Art</h3>
+      <h3 class="trochut black-text">Back-Lit Canvas Art</h3>
       <% if @led_picture %>
         <%= image_tag @led_picture.image.url(:medium), :class => 'responsive-img' %>
       <% end %>
@@ -25,7 +25,7 @@
   </div>
   <div class="col s12 m4 center-align">
     <a href="/guitar_string_bracelets">
-      <h3 class="trochut">Guitar String Bracelets</h3>
+      <h3 class="trochut black-text">Guitar String Bracelets</h3>
       <img src="/guitar-1.jpeg" alt="" class="responsive-img"/>
     </a>
   </div>
