--- a/app/views/greeting_cards/congratulations.html.erb
+++ b/app/views/greeting_cards/congratulations.html.erb
@@ -21,7 +21,7 @@
 
 <div class="center-align">
 
-  <h2 class="trochut">Congrats</h2>
+  <h2 class="trochut" style="text-decoration:underline">Congrats</h2>
 
   <%= render partial: "card_partial" %>
 
