--- a/app/views/greeting_cards/sympathy.html.erb
+++ b/app/views/greeting_cards/sympathy.html.erb
@@ -22,7 +22,7 @@
 
 <div class="center-align">
 
-  <h2 class="trochut">Sympathy</h2>
+  <h2 class="trochut" style="text-decoration:underline">Sympathy</h2>
 
   <%= render partial: "card_partial" %>
 
