--- a/app/views/guitar_string_bracelets/index.html.erb
+++ b/app/views/guitar_string_bracelets/index.html.erb
@@ -8,13 +8,13 @@
   </div>
   <div class="row">
     <div class="col s12 m4">
-      <img src="/guitar-1.jpeg" alt="" class="responsive-img"/>
+      <img src="/guitar-1.jpeg" alt="" class="responsive-img materialboxed"/>
     </div>
     <div class="col s12 m4">
-      <img src="/guitar-3.jpeg" alt="" class="responsive-img"/>
+      <img src="/guitar-3.jpeg" alt="" class="responsive-img materialboxed"/>
     </div>
     <div class="col s12 m4">
-      <img src="/guitar-2.jpeg" alt="" class="responsive-img"/>
+      <img src="/guitar-2.jpeg" alt="" class="responsive-img materialboxed"/>
     </div>
   </div>
 </div>
