--- a/app/views/greeting_cards/index.html.erb
+++ b/app/views/greeting_cards/index.html.erb
@@ -2,56 +2,74 @@
 <h2 class="center-align trochut" style="text-decoration:underline">Greeting Cards</h2>
 
 <div class="row center-align">
-  <div class="col s4">
-    <a href="/cards/birthday">
-      <h4 class="trochut">Birthday</h4>
-      <% if @birthday_picture %>
-        <%= image_tag @birthday_picture.front_image.url(:medium), :class => 'responsive-img' %>
-      <% end %>
-    </a>
+
+  <div id="card" class="col s12 m4 no-padding center-align" style="margin: 0 auto; cursor: pointer">
+    <div class="row col s12 center-align">
+      <h4 class='trochut'>Birthday</h4>
+      <div class="col s12 center-align">
+        <div style="margin-left: 30px; margin-right: 30px">
+          <%= image_tag @birthday_picture.front_image.url(:large), :class => 'border responsive-img' %>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="col s4 ">
-    <a href="/cards/sympathy">
-      <h4 class="trochut">Sympathy</h4>
-      <% if @sympathy_picture %>
-        <%= image_tag @sympathy_picture.front_image.url(:medium), :class => 'responsive-img' %>
-      <% end %>
-    </a>
+
+  <div id="card" class="col s12 m4 no-padding center-align" style="margin: 0 auto; cursor: pointer">
+    <div class="row col s12 center-align">
+      <h4 class='trochut'>Sympathy</h4>
+      <div class="col s12 center-align">
+        <div style="margin-left: 30px; margin-right: 30px">
+          <%= image_tag @sympathy_picture.front_image.url(:large), :class => 'border responsive-img' %>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="col s4 ">
-    <a href="/cards/thank_you">
-      <h4 class="trochut">Thank You</h4>
-      <% if @thank_you_picture %>
-        <%= image_tag @thank_you_picture.front_image.url(:medium), :class => 'responsive-img' %>
-      <% end %>
-    </a>
+
+  <div id="card" class="col s12 m4 no-padding center-align" style="margin: 0 auto; cursor: pointer">
+    <div class="row col s12 center-align">
+      <h4 class='trochut'>Thank You</h4>
+      <div class="col s12 center-align">
+        <div style="margin-left: 30px; margin-right: 30px">
+          <%= image_tag @thank_you_picture.front_image.url(:large), :class => 'border responsive-img' %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
+
 <div class="row center-align">
-  <div class="col s4 ">
-    <a href="/cards/love">
-      <h4 class="trochut">Love</h4>
-      <% if @love_picture %>
-        <%= image_tag @love_picture.front_image.url(:medium), :class => 'responsive-img' %>
-      <% end %>
-    </a>
+
+  <div id="card" class="col s12 m4 no-padding center-align" style="margin: 0 auto; cursor: pointer">
+    <div class="row col s12 center-align">
+      <h4 class='trochut'>Love</h4>
+      <div class="col s12 center-align">
+        <div style="margin-left: 30px; margin-right: 30px">
+          <%= image_tag @love_picture.front_image.url(:large), :class => 'border responsive-img' %>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="col s4 ">
-    <a href="/cards/congratulations">
-      <h4 class="trochut">Congratulations</h4>
-      <% if @congratulations_picture %>
-        <%= image_tag @congratulations_picture.front_image.url(:medium), :class => 'responsive-img' %>
-      <% end %>
-    </a>
+  <div id="card" class="col s12 m4 no-padding center-align" style="margin: 0 auto; cursor: pointer">
+    <div class="row col s12 center-align">
+      <h4 class='trochut'>Congratulations</h4>
+      <div class="col s12 center-align">
+        <div style="margin-left: 30px; margin-right: 30px">
+          <%= image_tag @congratulations_picture.front_image.url(:large), :class => 'border responsive-img' %>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="col s4 ">
-    <a href="/cards/anniversary">
-      <h4 class="trochut">Anniversary</h4>
-      <% if @anniversary_picture %>
-        <%= image_tag @anniversary_picture.front_image.url(:medium), :class => 'responsive-img' %>
-      <% end %>
-    </a>
-  </div>
+    <div id="card" class="col s12 m4 no-padding center-align" style="margin: 0 auto; cursor: pointer">
+      <div class="row col s12 center-align">
+        <h4 class='trochut'>Anniversary</h4>
+        <div class="col s12 center-align">
+          <div style="margin-left: 30px; margin-right: 30px">
+            <%= image_tag @anniversary_picture.front_image.url(:large), :class => 'border responsive-img' %>
+          </div>
+        </div>
+      </div>
+    </div>
+
 </div>
 
 <script>
