--- a/app/views/greeting_cards/index.html.erb
+++ b/app/views/greeting_cards/index.html.erb
@@ -1,12 +1,12 @@
 
-<h2 class="center-align trochut" style="text-decoration:underline">Greeting Cards</h2>
+<h2 class="center-align trochut black-text" style="text-decoration:underline">Greeting Cards</h2>
 
 <div class="row center-align">
 
   <div id="card" class="col s12 m4 no-padding center-align" style="margin: 0 auto; cursor: pointer">
     <a href="/cards/birthday">
       <div class="row col s12 center-align">
-        <h4 class='trochut'>Birthday</h4>
+        <h4 class='trochut black-text'>Birthday</h4>
         <div class="col s12 center-align">
           <div style="margin-left: 30px; margin-right: 30px">
             <%= image_tag @birthday_picture.front_image.url(:large), :class => 'border responsive-img' %>
@@ -19,7 +19,7 @@
   <div id="card" class="col s12 m4 no-padding center-align" style="margin: 0 auto; cursor: pointer">
     <a href="/cards/sympathy">
       <div class="row col s12 center-align">
-        <h4 class='trochut'>Sympathy</h4>
+        <h4 class='trochut black-text'>Sympathy</h4>
         <div class="col s12 center-align">
           <div style="margin-left: 30px; margin-right: 30px">
             <%= image_tag @sympathy_picture.front_image.url(:large), :class => 'border responsive-img' %>
@@ -32,7 +32,7 @@
   <div id="card" class="col s12 m4 no-padding center-align" style="margin: 0 auto; cursor: pointer">
     <a href="/cards/thank_you">
       <div class="row col s12 center-align">
-        <h4 class='trochut'>Thank You</h4>
+        <h4 class='trochut black-text'>Thank You</h4>
         <div class="col s12 center-align">
           <div style="margin-left: 30px; margin-right: 30px">
             <%= image_tag @thank_you_picture.front_image.url(:large), :class => 'border responsive-img' %>
@@ -48,7 +48,7 @@
   <div id="card" class="col s12 m4 no-padding center-align" style="margin: 0 auto; cursor: pointer">
     <a href="/cards/love">
       <div class="row col s12 center-align">
-        <h4 class='trochut'>Love</h4>
+        <h4 class='trochut black-text'>Love</h4>
         <div class="col s12 center-align">
           <div style="margin-left: 30px; margin-right: 30px">
             <%= image_tag @love_picture.front_image.url(:large), :class => 'border responsive-img' %>
@@ -60,7 +60,7 @@
   <div id="card" class="col s12 m4 no-padding center-align" style="margin: 0 auto; cursor: pointer">
     <a href="/cards/congratulations">
       <div class="row col s12 center-align">
-        <h4 class='trochut'>Congratulations</h4>
+        <h4 class='trochut black-text'>Congratulations</h4>
         <div class="col s12 center-align">
           <div style="margin-left: 30px; margin-right: 30px">
             <%= image_tag @congratulations_picture.front_image.url(:large), :class => 'border responsive-img' %>
@@ -72,7 +72,7 @@
     <div id="card" class="col s12 m4 no-padding center-align" style="margin: 0 auto; cursor: pointer">
       <a href="/cards/anniversary">
         <div class="row col s12 center-align">
-          <h4 class='trochut'>Anniversary</h4>
+          <h4 class='trochut black-text'>Anniversary</h4>
           <div class="col s12 center-align">
             <div style="margin-left: 30px; margin-right: 30px">
               <%= image_tag @anniversary_picture.front_image.url(:large), :class => 'border responsive-img' %>
