--- a/app/views/led_pictures/index.html.erb
+++ b/app/views/led_pictures/index.html.erb
@@ -58,6 +58,6 @@
     })
     image.attr('class', 'responsive-img image hidden');
     playButton.attr('class', 'responsive-img play-button hidden')
-    gif.attr('class', 'responsive-img gif materialboxed');
+    gif.attr('class', 'responsive-img gif');
   }
 </script>
