removes materialboxed leds

--- a/app/views/led_pictures/index.html.erb
+++ b/app/views/led_pictures/index.html.erb
@@ -7,7 +7,7 @@
       <div class="col s12 m3 led-picture center-align">
         <img src="/play.png" alt="" class="play-button responsive-img" />
         <%= image_tag led.image.url(:medium), :class => "responsive-img image" %>
-        <%= image_tag led.gif.url(:medium), :class => "responsive-img hidden gif materialboxed" %>
+        <%= image_tag led.gif.url(:medium), :class => "responsive-img hidden gif" %>
         <h5 class="trochut"><%= led.title %></h5>
         <h5 class = "oswald"><%= led.code %></h5>
       </div>
