reverts back to fix s3 images

--- a/app/views/greeting_cards/thank_you.html.erb
+++ b/app/views/greeting_cards/thank_you.html.erb
@@ -1,5 +1,23 @@
 
-<div class="center-align">
+<div class="center-align row">
+
+  <div class="center-align row">
+    <%= form_for GreetingCard.new do |f| %>
+      <div class="input-field">
+        <label>Front Image</label>
+        <%= f.file_field :front_image %>
+      </div>
+      <div class="input-field">
+        <label>Inside Image</label>
+        <%= f.file_field :inside_image %>
+      </div>
+      <div class="input-field">
+        <label>Code</label>
+        <%= f.text_field :code %>
+      </div>
+      <%= f.hidden_field :category, :value => 'Thank You' %>
+      <%= f.submit %>
+    <% end %>
 
   <h2 class="trochut" style="text-decoration:underline">Thank You</h2>
 
