--- a/app/views/greeting_cards/_card_partial.html.erb
+++ b/app/views/greeting_cards/_card_partial.html.erb
@@ -1,5 +1,5 @@
 <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-<h5>Each card retails for $3.25</h5>
+<h5>Retails for $3.25</h5>
 
 <% @cards.each_slice(3) do |slice| %>
   <div class="row col s12 center-align">
