--- a/app/views/led_pictures/index.html.erb
+++ b/app/views/led_pictures/index.html.erb
@@ -1,6 +1,28 @@
 
 <h1 class="center-align trochut" style="text-decoration:underline">Back-Lit Canvas Art</h1>
 
+
+<div class="center-align row">
+  <%= form_for LedPicture.new do |f| %>
+    <div class="input-field">
+      <label>Front Image</label>
+      <%= f.file_field :image %>
+    </div>
+    <div class="input-field">
+      <label>Inside Image</label>
+      <%= f.file_field :gif %>
+    </div>
+    <div class="input-field">
+      <label>Code</label>
+      <%= f.text_field :code %>
+    </div>
+    <div class="input-field">
+      <label>Title</label>
+      <%= f.text_field :title %>
+    </div>
+    <%= f.submit %>
+  <% end %>
+
 <% @led_pictures.each_slice(2) do |slice| %>
   <div class="row">
     <% slice.each do |led| %>
