--- a/app/views/greeting_cards/index.html.erb
+++ b/app/views/greeting_cards/index.html.erb
@@ -9,7 +9,9 @@
         <h4 class='trochut black-text'>Birthday</h4>
         <div class="col s12 center-align">
           <div style="margin-left: 30px; margin-right: 30px">
-            <%= image_tag @birthday_picture.front_image.url(:large), :class => 'border responsive-img' %>
+            <% if !@birthday_picture.nil? %>
+              <%= image_tag @birthday_picture.front_image.url(:large), :class => 'border responsive-img' %>
+            <% end %>
           </div>
         </div>
       </div>
@@ -22,7 +24,9 @@
         <h4 class='trochut black-text'>Sympathy</h4>
         <div class="col s12 center-align">
           <div style="margin-left: 30px; margin-right: 30px">
-            <%= image_tag @sympathy_picture.front_image.url(:large), :class => 'border responsive-img' %>
+            <% if !@sympathy_picture.nil? %>
+              <%= image_tag @sympathy_picture.front_image.url(:large), :class => 'border responsive-img' %>
+            <% end %>
           </div>
         </div>
       </div>
@@ -35,7 +39,9 @@
         <h4 class='trochut black-text'>Thank You</h4>
         <div class="col s12 center-align">
           <div style="margin-left: 30px; margin-right: 30px">
-            <%= image_tag @thank_you_picture.front_image.url(:large), :class => 'border responsive-img' %>
+            <% if !@thank_you_picture.nil? %>
+              <%= image_tag @thank_you_picture.front_image.url(:large), :class => 'border responsive-img' %>
+            <% end %>
           </div>
         </div>
       </div>
@@ -51,7 +57,9 @@
         <h4 class='trochut black-text'>Love</h4>
         <div class="col s12 center-align">
           <div style="margin-left: 30px; margin-right: 30px">
-            <%= image_tag @love_picture.front_image.url(:large), :class => 'border responsive-img' %>
+            <% if !@love_picture.nil? %>
+              <%= image_tag @love_picture.front_image.url(:large), :class => 'border responsive-img' %>
+            <% end %>
           </div>
         </div>
       </div>
@@ -63,7 +71,9 @@
         <h4 class='trochut black-text'>Congratulations</h4>
         <div class="col s12 center-align">
           <div style="margin-left: 30px; margin-right: 30px">
-            <%= image_tag @congratulations_picture.front_image.url(:large), :class => 'border responsive-img' %>
+            <% if !@congratulations_picture.nil? %>
+              <%= image_tag @congratulations_picture.front_image.url(:large), :class => 'border responsive-img' %>
+            <% end %>
           </div>
         </div>
       </div>
@@ -75,7 +85,9 @@
           <h4 class='trochut black-text'>Anniversary</h4>
           <div class="col s12 center-align">
             <div style="margin-left: 30px; margin-right: 30px">
-              <%= image_tag @anniversary_picture.front_image.url(:large), :class => 'border responsive-img' %>
+              <% if !@anniversary_picture.nil? %>
+                <%= image_tag @anniversary_picture.front_image.url(:large), :class => 'border responsive-img' %>
+              <% end %>
             </div>
           </div>
         </div>
