--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,17 +10,17 @@
   <div class="col s12 m4 center-align">
     <a href="/greeting_cards">
       <h3 class="trochut black-text" style="text-decoration:underline">Greeting Cards</h3>
-      <% if @greeting_card_picture %>
-        <%= image_tag @greeting_card_picture.front_image.url(:large), :class => 'responsive-img' %>
-      <% end %>
+      <!-- <#% if @greeting_card_picture %>
+        <#%= image_tag @greeting_card_picture.front_image.url(:large), :class => 'responsive-img' %>
+      <#% end %> -->
     </a>
   </div>
   <div class="col s12 m4 center-align">
     <a href="/led_pictures">
       <h3 class="trochut black-text" style="text-decoration:underline">Back-Lit Canvas Art</h3>
-      <% if @led_picture %>
-        <%= image_tag @led_picture.image.url(:medium), :class => 'responsive-img' %>
-      <% end %>
+      <!-- <#% if @led_picture %>
+        <#%= image_tag @led_picture.image.url(:medium), :class => 'responsive-img' %>
+      <#% end %> -->
     </a>
   </div>
   <div class="col s12 m4 center-align">
