--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,10 @@
 
 
 
-<div class="col s12 center-align">
+<!-- <div class="col s12 center-align">
   <h1 class="center-align logo">Grassy Hill Productions</h1>
   <img src="/logo.png" alt="" class="responsive-img" />
-</div>
+</div> -->
 
 <div class="row">
   <div class="col s12 m4 center-align">
