--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -2,8 +2,8 @@
   <div class="nav-wrapper">
     <a href="/" class="brand-logo logo"><h4>Grassy Hill Productions</h4></a>
     <ul id="nav-mobile" class="right">
-      <a href="/cart">
-        <i class="material-icons">shopping_cart</i>
+      <a href="/contact">
+        Contact
       </a>
     </ul>
   </div>
