--- a/app/views/greeting_cards/birthday.html.erb
+++ b/app/views/greeting_cards/birthday.html.erb
@@ -19,7 +19,7 @@
     <% end %>
 
   <h2 class="trochut" style="text-decoration:underline">Birthday</h2>
-
+  <h1>YOYOOYOYO</h1>
   <%= render partial: "card_partial" %>
 
 </div>
