--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
 <div class="row">
   <div class="col s12 m4 center-align">
     <a href="/greeting_cards">
-      <h3 class="trochut black-text" style="text-decoration:underline">Greeting Cardsssssss</h3>
+      <h3 class="trochut black-text" style="text-decoration:underline">Greeting Cards</h3>
       <!-- <#% if @greeting_card_picture %>
         <#%= image_tag @greeting_card_picture.front_image.url(:large), :class => 'responsive-img' %>
       <#% end %> -->
