fixes merge and labels

--- a/app/views/led_pictures/index.html.erb
+++ b/app/views/led_pictures/index.html.erb
@@ -5,11 +5,11 @@
 <div class="center-align row">
   <%= form_for LedPicture.new do |f| %>
     <div class="input-field">
-      <label>Front Image</label>
+      <label>Image</label>
       <%= f.file_field :image %>
     </div>
     <div class="input-field">
-      <label>Inside Image</label>
+      <label>Gif</label>
       <%= f.file_field :gif %>
     </div>
     <div class="input-field">
