redesign front page

--- a/app/views/led_pictures/index.html.erb
+++ b/app/views/led_pictures/index.html.erb
@@ -2,8 +2,8 @@
 <h1 class="center-align trochut" style="text-decoration:underline">Back-Lit Canvas Art</h1>
 
 
-<div class="center-align row">
-  <!-- <#%= form_for LedPicture.new do |f| %>
+<!-- <div class="center-align row">
+  <#%= form_for LedPicture.new do |f| %>
     <div class="input-field">
       <label>Image</label>
       <#%= f.file_field :image %>
