--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -4,7 +4,7 @@
     <h1 class="trochut">Contact</h1>
   </div>
   <div class="row">
-    <div class="col s8 offset-s2">
+    <div class="col s8 offset-s2 border">
       <h4 class="oswald">If you have any questions, comments, or concerns, don't hesitate to reach out to us.</h4>
       <h5>Email: <a href="mailto:grassyhillproductions4@gmail.com">GrassyHillProductions4@gmail.com<i class="material-icons">email</i></a></h5>
       <h5>Phone: (203) 233-1456</h5>
