--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -4,10 +4,34 @@
     <h1 class="trochut">Contact</h1>
   </div>
   <div class="row">
-    <div class="col s8 offset-s2 border">
-      <h4 class="oswald">If you have any questions, comments, or concerns, don't hesitate to reach out to us.</h4>
-      <h5>Email: <a href="mailto:grassyhillproductions4@gmail.com">GrassyHillProductions4@gmail.com<i class="material-icons">email</i></a></h5>
-      <h5>Phone: (203) 233-1456</h5>
+    <div class="col s8 offset-s2 border" style='padding: 30px'>
+      <div class="row">
+        <h5 class="oswald">If you have any questions, comments, or concerns, don't hesitate to reach out to us.</h5>
+        <h5>Phone: (203) 233-1456</h5>
+      </div>
+      <div class="row">
+        <h5>Contact:</h5>
+        <form class='contact-us'>
+          <div class="input-field">
+            <label>Name</label>
+            <input type="text" class='name'>
+          </div>
+          <div class="input-field">
+            <label>Email</label>
+            <input type="text" class='email'>
+          </div>
+          <div class="input-field">
+            <label>Subject</label>
+            <input type="text" class='subject'>
+          </div>
+          <div class="input-field">
+            <label>Message</label>
+            <textarea rows="8" cols="40" class='message'></textarea>
+          </div>
+          <h6 class='message'></h6>
+          <input type="submit" value="Send" class='btn submit'>
+        </form>
+      </div>
     </div>
   </div>
 
@@ -16,5 +40,27 @@
 <script>
   $(document).ready(function(){
     $('select').material_select();
+  })
+
+  $('.contact-us').submit(function(e){
+    e.preventDefault()
+    var name = $(this).find('.name').val()
+    var email = $(this).find('.email').val()
+    var message = $(this).find('.message').val()
+    var subject = $(this).find('.subject').val()
+    $(this).find('.submit').prop('disabled', true)
+    $(this).find('.message').text("")
+    $.ajax({
+      method: 'POST',
+      url: '/contact?name=' + name + '&email=' + email + '&subject=' + subject + '&message=' + message,
+      success: function(data){
+        $('.name').val('')
+        $('.email').val('')
+        $('.message').val('')
+        $('.subject').val('')
+        $('.submit').prop('disabled', false)
+        $('.message').text("Message sent, we'll get back to you soon!")
+      }
+    })
   })
 </script>
